variables.RunFour.scala.error
Compilation error:
RunFour:2: error: '(' expected but identifier found.
while (NumberOfBaggle!=4) {forward(); if isOverBaggle() {NumberOfBaggle=NumberOfBaggle+1}} 
                                         ^RunFour:2: error: illegal start of simple expression
while (NumberOfBaggle!=4) {forward(); if isOverBaggle() {NumberOfBaggle=NumberOfBaggle+1}} 
                                                                                         ^